--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,10 @@ certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
 coverage==7.13.3
+dependency-injector==4.45.0
 distro==1.9.0
+structlog==24.1.0
+alembic==1.14.0
 docstring_parser==0.17.0
 fastapi==0.128.4
 gitdb==4.0.12
